# flutter-tetris

./: flutter_service_worker.js  main.dart.js  main.dart.js.map  pubspec.yaml
android/app/: build.gradle
android/app/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  LowLatencyAudio.h  low-latency-audio.cpp
android/app/src/main/kotlin/tech/soit/flutter_tetris/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
assets/: AssetManifest.json  LICENSE
lib/: main.dart
lib/material/: audios.dart
lib/material/android/: low_latency_audio.dart
